Refactor reproductions (#3149)
+ Fold Constants into ReproductionUtils
+ For regressions from prebuilt indexes, create Java commands from code to support custom JVM args
+ Add support for custom logs and runs directories
+ Rename RunReproductionCommands‎ to RunJavaReproductionCommands since it only supports Java